OBPIH-1310: Fix issue with truncating text in label fields

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -250,10 +250,6 @@ body {
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 6px $red-gamma;
 }
 
-.wrap-text {
-  overflow-wrap: break-word;
-}
-
 .text-disabled {
   color: $gray-delta;
 }
